--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
     name: Terraform Plan
     runs-on: ubuntu-latest
     needs: check
+    environment: Prod
 
     steps:
       - name: Checkout
