--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch local-server.ts"
+    "dev": "tsx watch local-server.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.700.0",
@@ -20,6 +22,7 @@
     "@types/node": "^22.10.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "vitest": "3.0.5"
   }
 }
