--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # lightningcss uses platform-specific optional deps that aren't resolved
+      # in the lockfile when it was generated on a different OS (e.g. macOS).
+      - name: Install missing platform-specific binaries
+        run: |
+          LC_VERSION=$(node -e "console.log(require('./node_modules/lightningcss/package.json').version)")
+          npm install --no-save "lightningcss-linux-x64-gnu@${LC_VERSION}"
+
       - name: Build frontend
         run: npm run build --workspace=frontend
 
