--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,6 +62,7 @@ jobs:
         run: terraform apply -auto-approve
         env:
           TF_VAR_aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
+          TF_VAR_openai_api_key: ${{ secrets.OPENAI_API_KEY }}
 
       - name: Deploy frontend to S3
         working-directory: terraform
